--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,17 @@
 
 buildscript {
     repositories {
-        maven {
+        maven { url "http://maven.aliyun.com/nexus/content/repositories/jcenter/" }
+        maven { url "http://maven.aliyun.com/nexus/content/repositories/google/" }
+        maven { url "https://jitpack.io" }
+		google()
+		jcenter()
+		maven {
             url "http://maven.oschina.net/content/groups/public/"
         }
-        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.1'
+        classpath 'com.android.tools.build:gradle:4.1.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,7 +21,11 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {url "http://maven.oschina.net/content/groups/public/" }
-        jcenter()
+		maven { url "http://maven.aliyun.com/nexus/content/repositories/jcenter/" }
+        maven { url "http://maven.aliyun.com/nexus/content/repositories/google/" }
+        maven { url "https://jitpack.io" }
+		google()
+		jcenter()        
+		maven {url "http://maven.oschina.net/content/groups/public/" }
     }
 }
